sandbox/output
GildedRoseTest.java:40: error: method testQualityIncreaseForAgedBrie() is already defined in class GildedRoseTest
    public void testQualityIncreaseForAgedBrie() {
                ^
1 error
